# TransformApplier

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
include/ta/: config.hpp  engine.hpp  obs_file.hpp
src/: config.cpp  engine.cpp  main.cpp  obs_file.cpp
tests/: ta_tests.cpp
